finish fixing all tests